--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
+    "react-toastify": "^11.0.5",
     "react-typed": "^2.0.12",
     "tailwindcss": "^4.0.16"
   },
